// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidget05 matches custom props snapshot 1`] = `
<div
  class="card text-white bg-info"
>
  <div
    class="card-body"
  >
    <div
      class="h1 text-muted text-right mb-4"
    >
      <i
        class="icon-custom"
      />
    </div>
     
    <div
      class="h4 mb-0"
    >
      test
    </div>
     
    <small
      class="text-muted text-uppercase font-weight-bold"
    >
      test
    </small>
     
    <cprogress-stub
      class="progress-xs my-3 mb-0 progress-white"
      color=""
      max="100"
      precision="0"
      value="35"
    />
  </div>
</div>
`;

exports[`CWidget05 matches default props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body"
  >
    <div
      class="h1 text-muted text-right mb-4"
    >
      <i
        class="icon-people"
      />
    </div>
     
    <div
      class="h4 mb-0"
    >
      header:string
    </div>
     
    <small
      class="text-muted text-uppercase font-weight-bold"
    >
      text:string
    </small>
     
    <cprogress-stub
      class="progress-xs my-3 mb-0"
      color="success"
      max="100"
      precision="0"
      value="25"
    />
  </div>
</div>
`;
